# gpa-calculator-api

./: README.md  pyproject.toml  requirements.txt
app/: app.py
app/api/v1/endpoints/: transcripts.py
app/core/: config.py
app/models/: schemas.py
app/services/: extractor.py  statistics.py
app/utils/: pdf_utils.py
tests/: test_api.py  test_extractor.py  test_uwo_endpoint.py
