[tool.poetry]
name = "gpa-api"
version = "0.1.0"
description = "API for extracting course information from transcripts and calculating GPA statistics."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
PyPDF2 = "^1.26.0"
pandas = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"