[tool.poetry]
name = "gpa-api"
version = "0.1.0"
description = "API for extracting course information from transcripts and calculating GPA statistics."
authors = ["alexnham11@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
annotated-doc==0.0.4
annotated-types==0.7.0
anyio==4.11.0
certifi==2025.10.5
charset-normalizer==3.4.4
click==8.3.0
colorama==0.4.6
docopt==0.6.2
fastapi==0.121.1
h11==0.16.0
httpcore==1.0.9
httpx==0.28.1
idna==3.11
iniconfig==2.3.0
numpy==2.3.4
packaging==25.0
pandas==2.3.3
pipreqs==0.4.13
pluggy==1.6.0
pycryptodome==3.23.0
pydantic==2.12.4
pydantic_core==2.41.5
Pygments==2.19.2
pypdf==6.2.0
pytest==9.0.0
python-dateutil==2.9.0.post0
python-multipart==0.0.20
pytz==2025.2
requests==2.32.5
six==1.17.0
sniffio==1.3.1
starlette==0.49.3
typing-inspection==0.4.2
typing_extensions==4.15.0
tzdata==2025.2
urllib3==2.5.0
uvicorn==0.38.0
yarg==0.1.10
pytest==9.0.0
pipreqs==0.4.13
requests==2.32.5    # TestClient needs requests
httpx==0.28.1
numpy==2.3.4

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"