[project]
name = "gpa-api"
version = "0.1.0"
description = "FastAPI GPA extraction and UWO GPA averaging"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.121.1",
  "pydantic==2.12.4",
  "pypdf==6.2.0",
  "python-multipart==0.0.20",
  "uvicorn==0.38.0",
  "typing_extensions==4.15.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.0",
  "pipreqs==0.4.13",
  "requests==2.32.5",
  "httpx==0.28.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"